F: Added more AI flexibility